--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Mirkan Çalışkan</title>
-    <script defer src="main.dart.js" type="application/javascript"></script>
-  </head>
-  <body></body>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>personal_website</title>
+</head>
+<body>
+  <script src="main.dart.js" type="application/javascript"></script>
+</body>
 </html>
